force-app/main/default/objects/Retail_Inventory_Purchase_Log__c/Retail_Inventory_Purchase_Log__c.object-meta.xml
<CustomObject>
    <label>Retail Inventory Purchase Log</label>
    <nameField>
        <displayFormat>RIPL-{0000}</displayFormat>
        <label>Retail Inventory Purchase Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Retail Inventory Purchase Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>