force-app/main/default/objects/Retail_Inventory_Purchase_Log__c/fields/Add_Qty__c.field-meta.xml
<CustomField>
    <fullName>Add_Qty__c</fullName>
    <label>Add Qty</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>