force-app/main/default/objects/Retail_Inventory_Purchase_Log__c/fields/Add_Rack__c.field-meta.xml
<CustomField>
    <fullName>Add_Rack__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Add Rack</label>
    <referenceTo>Retail_Rack__c</referenceTo>
    <relationshipLabel>Retail Inventory Purchase Logs</relationshipLabel>
    <relationshipName>Retail_Inventory_Purchase_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>