force-app/main/default/objects/Retail_Inventory_Purchase_Log__c/fields/Add_Supplier__c.field-meta.xml
<CustomField>
    <fullName>Add_Supplier__c</fullName>
    <label>Add Supplier</label>
    <length>255</length>
    <type>Text</type>
</CustomField>