force-app/main/default/objects/Retail_Inventory_Purchase_Log__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Name</label>
    <referenceTo>Retail_Product__c</referenceTo>
    <relationshipLabel>Retail Inventory Purchase Logs</relationshipLabel>
    <relationshipName>Retail_Inventory_Purchase_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>