force-app/main/default/objects/Retail_Inventory_Purchase_Log__c/fields/Warehouse_Code__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Code__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Warehouse Code</label>
    <referenceTo>Retail_Warehouse__c</referenceTo>
    <relationshipLabel>Retail Inventory Purchase Logs</relationshipLabel>
    <relationshipName>Retail_Inventory_Purchase_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>